tests/ui/consts/min_const_fn/bad_const_fn_body_ice.stderr
error[E0015]: cannot call non-const associated function `Box::<[i32; 3]>::new` in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const method `slice::<impl [i32]>::into_vec::<std::alloc::Global>` in constant functions
  --> $DIR/bad_const_fn_body_ice.rs:2:5
   |
LL |     vec![1, 2, 3]
   |     ^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
